--- a/kiwi_config.template.json
+++ b/kiwi_config.template.json
@@ -106,6 +106,12 @@
         "default": "",
         "description": "A personal memo for the client.\nThis will be displayed whenever the client connects to the server."
     },
+    "client_player_collision": {
+        "name": "Allow Player Collision and Damage",
+        "type": "boolean",
+        "default": "false",
+        "description": "If true, you will be able to collide with other players and damage them.\nIf false, other players' collision and damage will be disabled for you.\nPlayers can damage you even if this option is disabled on your end.\nSome issues arise when using this mode, for instance if a player gets caught in a barnacle then you will crash."
+    },
     "note_setup_complete": {
         "name": "Setup Complete",
         "type": "note",
