--- a/kiwi_config.template.json
+++ b/kiwi_config.template.json
@@ -112,6 +112,12 @@
         "default": "false",
         "description": "If true, you will be able to collide with other players and damage them.\nIf false, other players' collision and damage will be disabled for you.\nPlayers can damage you even if this option is disabled on your end.\nSome issues arise when using this mode, for instance if a player gets caught in a barnacle then you will crash."
     },
+    "client_print_vconsole": {
+        "name": "Show VConsole Output",
+        "type": "boolean",
+        "default": "false",
+        "description": "Recommended for debugging purposes.\nIf true, text printed to the VConsole will be displayed in the window.\nIf false, text printed to the VConsole will be ignored and may improve performance."
+    },
     "note_setup_complete": {
         "name": "Setup Complete",
         "type": "note",
