Rename to Kiwi's Co-Op Mod for Half-Life: Alyx

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiwimp_alyx",
   "version": "0.2.1",
-  "description": "Half-Life Alyx Multiplayer",
+  "description": "Kiwifruit's Co-Op HLVR Mod",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
